--- a/Bootstrap1/lesson01.html
+++ b/Bootstrap1/lesson01.html
@@ -12,10 +12,49 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lobster"
+      rel="stylesheet"
+      type="text/css"
+    />
     <!-- END LINKS -->
     <title>Cat Photo App</title>
   </head>
   <body>
+    <div class="container-fluid">
+      <h2 class="red-text">CatPhotoApp</h2>
+
+      <p>Click here for <a href="#">cat photos</a>.</p>
+
+      <a href="#"
+        ><img
+          class="smaller-image thick-green-border"
+          src="https://bit.ly/fcc-relaxing-cat"
+          alt="A cute orange cat lying on its back."
+      /></a>
+
+      <p>Things cats love:</p>
+      <ul>
+        <li>cat nip</li>
+        <li>laser pointers</li>
+        <li>lasagna</li>
+      </ul>
+      <p>Top 3 things cats hate:</p>
+      <ol>
+        <li>flea treatment</li>
+        <li>thunder</li>
+        <li>other cats</li>
+      </ol>
+      <form action="https://freecatphotoapp.com/submit-cat-photo">
+        <label><input type="radio" name="indoor-outdoor" /> Indoor</label>
+        <label><input type="radio" name="indoor-outdoor" /> Outdoor</label>
+        <label><input type="checkbox" name="personality" /> Loving</label>
+        <label><input type="checkbox" name="personality" /> Lazy</label>
+        <label><input type="checkbox" name="personality" /> Crazy</label>
+        <input type="text" placeholder="cat photo URL" required />
+        <button type="submit">Submit</button>
+      </form>
+    </div>
     <!-- SCRIPT -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
